static/css/styles.css
html {
    font-family: "Lato", Helvetica, sans-serif;
}

body {
    max-width: 600px;
    margin: 0 auto;
}

.header {
    background-color: #1c2023;
    font-weight: bold;
    color: white;
    padding: .5rem 2rem;
    margin-bottom: 1.75rem;
}

.header__logo {
    font-size: 1rem;
}

.heading {
    display: block;
    font-size: 1.5rem;
    text-align: center;
    margin-bottom: 2rem;
    text-transform: uppercase;
}

.timer {
    display: block;
    font-size: 4rem;
    text-align: center;
    margin-bottom: .75rem;
}

.main {
    padding: 0 1.25rem;
}

.form {
    display: flex;
    flex-direction: column;
    align-items: center;
    font-size: 0.9rem;
}

.form__button-container {
    display: flex;
    margin-top: 1.5rem;
}

.form__input-group {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    align-items: center;
    column-gap: .75rem;
    margin-bottom: 1rem;
}

.form__input {
    max-width: 6rem;
    border-radius: 4px;
    border: 1px solid #1c2023;
    padding: 7px 10px;
    font-size: inherit;
}

.form__label {
    margin-right: 10px;
    font-size: 1.2rem;
    text-align: right;
}

.button {
    font-size: 1.2rem;
    padding: 10px 30px;
    border: 1px solid #1c2023;
    background-color: #98D4FF;
    cursor: pointer;
    transition: background-color 0.1s ease-in-out;
}

.button:hover {
    background-color: #75BDF1;
}

.progress {
    display: block;
    width: 80%;
    margin: 0 auto;
    border: 1px solid #cdc7c2;
    background-image: none;
    -webkit-appearance: none;
}

.progress,
.progress::-webkit-progress-bar {
    background-color: #fff;
}

.progress--set::-webkit-progress-value {
    background-color: #F56565;
}

.progress--set::-moz-progress-bar {
    background-color: #F56565;
}

.progress--rest::-webkit-progress-value {
    background-color: #65F596;
}

.progress--rest::-moz-progress-bar {
    background-color: #65F596;
}

